# tt-metal

./: .gitignore  .gitmodules  activate_metal_env  build_metal.sh  conftest.py  pytest_commands.txt  submodule.sh  submodule_config.txt
dev/: README.md  __init__.py  common.py  device.ipynb  device.py
dev/models/: __init__.py
dev/py/: __init__.py  common.py
dev/scripts/: activate_compute_fps.sh
dev/tests/: test_compute_fps.py  test_pad_and_fold_conv_activation.py  test_trace_graph_simple.py  trace_graph_simple
dev/tools/: collect_pytests.py  (+5 more)
dev/ttsim/: CMakeLists.txt
dev/ttsim/cpp/: core_struct.h  ttsim.h
dev/ttsim/programming_examples/matmul/: CMakeLists.txt  matmul_multi.cpp  matmul_multi_reuse.cpp  matmul_multi_reuse_mcast.cpp  matmul_single.cpp  run.sh  test.sh  test_split_core_helper_function.cpp
dev/ttsim/programming_examples/matmul/kernel/: bmm_op.hpp  work_split.hpp
dev/ttsim/programming_examples/matmul/kernel/compute/: bmm.cpp  bmm_large_block_zm.cpp
dev/ttsim/programming_examples/matmul/kernel/dataflow/: reader_bmm_8bank.cpp  reader_bmm_8bank_output_tiles_partitioned.cpp  reader_bmm_tile_layout.cpp  reader_bmm_tile_layout_in0_receiver_in1_receiver.cpp  reader_bmm_tile_layout_in0_receiver_in1_sender.cpp  reader_bmm_tile_layout_in0_sender_in1_receiver.cpp  reader_bmm_tile_layout_in0_sender_in1_sender.cpp  writer_bmm_8bank.cpp  writer_bmm_tile_layout.cpp  writer_unary_interleaved_start_id.cpp
dev/ttsim/programming_examples/matmul/py/: matmul.py
dev/ttsim/programming_examples/test/: a.out  ptr_test.cpp
models/: utility_functions.py
(+62 files in other folders)
